# PromptTrace

./: .gitignore  README.md  pyproject.toml
examples/: demo_traces.py
examples/ADK/: README.md  adk_multi_agent_workflow.py
prompt_trace/: __init__.py  cli.py  core.py
tests/: test_adk_example.py  test_prompt_trace.py
